--- a/pet-impl/src/main/resources/application.yml
+++ b/pet-impl/src/main/resources/application.yml
@@ -9,4 +9,7 @@ spring:
   liquibase:
     enabled: true
     change-log: classpath:db.changelog-master.yaml
-
+telegram:
+  bot:
+    token: [ВАШ_ТОКЕН_ТУТ]
+    name: [ИМЯ_ВАШЕГО_БОТА]
