--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,10 @@
         <java-telegram-bot-api.version>6.2.0</java-telegram-bot-api.version>
         <mapstruct.version>1.5.3.Final</mapstruct.version>
         <java.version>1.8</java.version>
+        <java-telegram-bot-api.version>6.2.0</java-telegram-bot-api.version>
+        <mapstruct.version>1.5.3.Final</mapstruct.version>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
     </properties>
 
 </project>
