--- a/pet-impl/pom.xml
+++ b/pet-impl/pom.xml
@@ -58,12 +58,17 @@
         <dependency>
             <groupId>org.telegram</groupId>
             <artifactId>telegrambots</artifactId>
-            <version>6.1.0</version>
+            <version>${telegrambot.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.telegram</groupId>
+            <artifactId>telegrambots-spring-boot-starter</artifactId>
+            <version>${telegrambot.version}</version>
         </dependency>
         <dependency>
             <groupId>org.telegram</groupId>
             <artifactId>telegrambotsextensions</artifactId>
-            <version>6.1.0</version>
+            <version>${telegrambot.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
