--- a/pom.xml
+++ b/pom.xml
@@ -24,11 +24,10 @@
     <description>PetProject1</description>
 
     <properties>
+        <telegrambot.version>6.1.0</telegrambot.version>
         <postgresql.version>42.2.24</postgresql.version>
-        <java-telegram-bot-api.version>6.2.0</java-telegram-bot-api.version>
         <mapstruct.version>1.5.3.Final</mapstruct.version>
         <java.version>1.8</java.version>
-        <java-telegram-bot-api.version>6.2.0</java-telegram-bot-api.version>
         <mapstruct.version>1.5.3.Final</mapstruct.version>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
