--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
     <description>PetProject1</description>
 
     <properties>
+        <commons-lang3.version>3.12.0</commons-lang3.version>
         <telegrambot.version>6.1.0</telegrambot.version>
         <postgresql.version>42.2.24</postgresql.version>
         <mapstruct.version>1.5.3.Final</mapstruct.version>
