Правки в скриптах Liquibase и добавление уникального ключа в таблицу USER_STATE.

--- a/pet-db/db.changelog-master.yaml
+++ b/pet-db/db.changelog-master.yaml
@@ -11,3 +11,6 @@ databaseChangeLog:
   - include:
       file: db.changelog-v004-debtTable.yaml
       relativeToChangelogFile: true
+  - include:
+      file: db.changelog-v005-addUniqueKeyForUserStateTable.yaml
+      relativeToChangelogFile: true
