--- a/pet-db/db.changelog-v003-stateTable.yaml
+++ b/pet-db/db.changelog-v003-stateTable.yaml
@@ -1,6 +1,6 @@
 databaseChangeLog:
   - changeSet:
-      id: Add Users' State Table
+      id: Add USERS Table
       author: Aminev Ramil
       changes:
         - createTable:
