--- a/pet-impl/pom.xml
+++ b/pet-impl/pom.xml
@@ -61,6 +61,10 @@
             <version>${telegrambot.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.telegram</groupId>
             <artifactId>telegrambots-spring-boot-starter</artifactId>
             <version>${telegrambot.version}</version>
